--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,6 @@
     <include src="./partials/main.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-    <script src="./index.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
